--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <!-- Custom CSS stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Kelce & Roberts Law Office</title>
   </head>
